--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=kafka-consumer-service
 server.port=8082
 spring.kafka.bootstrapServers=localhost:9092
+kafka.topics=demo-topic,another-topic,third-topic
 spring.devtools.restart.enabled=false
 spring.devtools.livereload.enabled=false
